...

            LazyColumn(
                state = listState,
                contentPadding = PaddingValues(bottom = 16.dp),
                verticalArrangement = Arrangement.spacedBy(8.dp),
                modifier = modifier
                    .testTag("HomeList")
            ) {
                if (countryList.isNotEmpty()) {
                    items(countryList, key = { it.id }) { item ->
                        CountryItem(
                            title = item.title,
                            image = item.image,
...
